ops/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g8s-api-svc
  namespace: g8s
spec:
  selector:
    app: g8s-api
  ports:
    - name: g8s-api
      protocol: TCP
      port: 3000
      targetPort: 3333
  type: LoadBalancer
