ops/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: g8s-api-ing
  namespace: g8s
spec:
  rules:
  - host: api.g8s.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: g8s-api-svc
            port: 
              number: 3000
